--- a/MMHS_Event_App/Base.lproj/Main.storyboard
+++ b/MMHS_Event_App/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.9" systemVersion="14A329r" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Cwz-eF-3aF">
     <dependencies>
+        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
         <capability name="Constraints with attributes relative to the layout margin" minToolsVersion="6.0"/>
     </dependencies>
@@ -107,11 +108,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="54" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="wrO-zI-KvZ">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="320" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="wrO-zI-KvZ">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="StreamCell" rowHeight="320" id="DzI-Ki-4Dv">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="StreamCell" rowHeight="320" id="DzI-Ki-4Dv" customClass="StreamTableViewCell" customModule="MMHS_Event_App" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DzI-Ki-4Dv" id="HVa-Hg-fPa">
@@ -120,16 +121,25 @@
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="6h0-I8-6bp" id="WfX-AV-Ehq"/>
-                                    <outlet property="delegate" destination="6h0-I8-6bp" id="tbI-QJ-m5H"/>
+                                    <outlet property="dataSource" destination="6h0-I8-6bp" id="M6H-Uf-CAE"/>
+                                    <outlet property="delegate" destination="6h0-I8-6bp" id="L7p-Me-2wZ"/>
                                 </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wrO-zI-KvZ" firstAttribute="bottom" secondItem="umU-No-GE6" secondAttribute="bottomMargin" id="5Ik-CH-Glu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wrO-zI-KvZ" secondAttribute="trailing" constant="-16" id="O5G-f2-ygA"/>
+                            <constraint firstItem="wrO-zI-KvZ" firstAttribute="top" secondItem="umU-No-GE6" secondAttribute="topMargin" id="gal-bV-8nK"/>
+                            <constraint firstItem="wrO-zI-KvZ" firstAttribute="leading" secondItem="umU-No-GE6" secondAttribute="leadingMargin" constant="-16" id="n5T-Fi-XgI"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Stream" id="RRp-m4-qf0">
                         <barButtonItem key="rightBarButtonItem" systemItem="camera" id="PLi-Yr-D4G"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="wrO-zI-KvZ" id="7lM-1m-7KL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jYV-ic-ITH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
