--- a/MMHS_Event_App/Base.lproj/Main.storyboard
+++ b/MMHS_Event_App/Base.lproj/Main.storyboard
@@ -168,7 +168,7 @@
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hac-qd-tTv">
                                                     <rect key="frame" x="280" y="328" width="28" height="28"/>
-                                                    <state key="normal" image="like_image">
+                                                    <state key="normal" image="likeUnselected">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                 </button>
@@ -787,7 +787,7 @@
         <image name="cloudsImage" width="320" height="568"/>
         <image name="eventImage" width="160" height="160"/>
         <image name="icloudImage" width="124" height="84"/>
-        <image name="like_image" width="39" height="39"/>
+        <image name="likeUnselected" width="39" height="39"/>
         <image name="profilePic" width="100" height="100"/>
     </resources>
 </document>
